objects/Metal_Price_Adjust_Factors__c.object
<CustomObject><fields>
        <fullName>Band_Adj_Factor__c</fullName>
        <label>Band Adj Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Net_Weight__c</fullName>
        <label>Net Weight</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Yield band adjustment tables for 150kg and 750kg metal types, BMD and Job &amp; Bottom Pour</description><enableFeeds>false</enableFeeds><label>Metal Price Adjust Factors</label><visibility>Protected</visibility></CustomObject>